<resources>
    <string name="app_name">TheManipalProject</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="your_email">Your Email</string>
    <string name="login_to_account">Login to account</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="the_manipal_project">The Manipal Project</string>
    <string name="search">Search</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>

</resources>
